--- a/src/assets/styles/base.css
+++ b/src/assets/styles/base.css
@@ -1,7 +1,3 @@
-body {
-  background: red;
-}
-
 .data-header {
   color: black;
   font-size: 22px;
@@ -14,4 +10,11 @@ body {
   padding: 15px;
   background: white;
   margin: 15px;
+}
+
+.error {
+  background: red;
+  color: white;
+  font-size: 11px;
+  padding: 4px 8px;
 }
