--- a/src/app/KomponentyUB/users-details/users-details.component.html
+++ b/src/app/KomponentyUB/users-details/users-details.component.html
@@ -1,3 +1,12 @@
-<p>
-  users-details works!
-</p>
+{{user.nazwisko}}
+
+<div>
+  <div class="row">
+    <div class="col-sm-12 ">
+      <ul>
+        <li>{{userFull.distinquishedName}}</li>
+        {{userFull.imie}} {{userFull.nazwisko}} {{userFull.nazwa}} {{userFull.imie}} {{userFull.imie}} {{userFull.opis}} {{userFull.status}}
+      </ul>
+    </div>
+  </div>
+</div>
