--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,4 +1,4 @@
 /* You can add global styles to this file, and also import other style files */
 
-@import './assets/styles/base.css';
-@import './assets/styles/tables.css';
+@import './assets/styles/base.scss';
+@import './assets/styles/tables.scss';
